--- a/src/style/taskItem.module.scss
+++ b/src/style/taskItem.module.scss
@@ -220,6 +220,7 @@ $primary-color: #fff8e1;
     width: 97%;
     margin: 0 auto;
     padding: 5px;
+    position: relative;
     z-index: 10;
   }
 }
